objects/SFDC_Paid_Time_Off__c.object
<CustomObject>
    <description>Track your Paid Time Off requests and approvals here.</description>
    <fields>
        <fullName>Alternate_PTO_Approver__c</fullName>
        <formula>Employee_s_Name__r.Alternate_PTO_Approver__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate PTO Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approvers will review the leave application and change the status to approved (if approved, or rejected if not approved)</description>
        <inlineHelpText>this field is updated by the approval process, it is not editable by users</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <formula>Employee_s_Name__r.Manager.FirstName&amp;&quot; &quot;&amp; Employee_s_Name__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approving Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Date__c</fullName>
        <label>Day 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_1_End_Time__c</fullName>
        <label>Day 1 End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Hours_to_be_Used__c</fullName>
        <label>Day 1 Hours to be Used</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_1_Lunch__c</fullName>
        <label>Day 1 Lunch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Start_Time__c</fullName>
        <label>Day 1 Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Times__c</fullName>
        <label>Day 1 Times</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_2_Date__c</fullName>
        <label>Day 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_2_End_Time__c</fullName>
        <label>Day 2 End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Hours_to_be_Used__c</fullName>
        <label>Day 2 Hours to be Used</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_2_Lunch__c</fullName>
        <label>Day 2 Lunch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Start_Time__c</fullName>
        <label>Day 2 Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Times__c</fullName>
        <label>Day 2 Times</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_3_Date__c</fullName>
        <label>Day 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_3_End_Time__c</fullName>
        <label>Day 3 End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_3_Hours_to_be_Used__c</fullName>
        <label>Day 3 Hours to be Used</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_3_Lunch__c</fullName>
        <label>Day 3 Lunch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_3_Start_Time__c</fullName>
        <label>Day 3 Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_3_Times__c</fullName>
        <label>Day 3 Times</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Employee_s_Name__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that pulls the employee&apos;s department from their User Profile</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Notes__c</fullName>
        <defaultValue>&quot;You must click on the Submit for Approval button after Save&quot;</defaultValue>
        <inlineHelpText>please enter any notes if this request is for bereavement, jury duty or medical reasons.</inlineHelpText>
        <label>Employee Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <formula>Employee_s_Name__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup Salesforce User</inlineHelpText>
        <label>Employee&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Paid_Time_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndTime1PH__c</fullName>
        <label>EndTime1PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime2PH__c</fullName>
        <label>EndTime2PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime3PH__c</fullName>
        <label>EndTime3PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Weekends__c</fullName>
        <inlineHelpText>please check this box if your time off requests includes a Saturday and Sunday you do not wanted deducted from your PTO accrual bucket</inlineHelpText>
        <label>Exclude Weekends</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>Date that you will first be on leave.</description>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Day_Date__c</fullName>
        <label>Full Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Information__c</fullName>
        <description>Let employees know they must Submit for Approval</description>
        <formula>IF(  ISPICKVAL(Approval_Status__c, &quot;Not Submitted&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001U1qS&amp;oid=00D700000008zHZ&amp;lastMod=1309469134000&quot;,&quot;Help&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_to_be_Used__c</fullName>
        <inlineHelpText>enter the # of PTO hours you will be using for this request</inlineHelpText>
        <label>Hours to be Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Address__c</fullName>
        <defaultValue>$User.Manager_Email_Address__c</defaultValue>
        <label>Manager Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Help_Info__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UJOc&amp;oid=00D700000008zHZ&amp;lastMod=1339520859000&quot;, &quot;Manager Notice&quot;)</formula>
        <label>Manager Help Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <formula>Employee_s_Name__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Notes__c</fullName>
        <inlineHelpText>A place for managers to make specific notes that are viewable to management only.</inlineHelpText>
        <label>Manager&apos;s Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multi_Day_From__c</fullName>
        <label>Multi Day From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_Day_To__c</fullName>
        <label>Multi Day To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Days__c</fullName>
        <label>Multiple Days</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Submitted_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by workflow when the not submitted workflow notification sent to the requestor</inlineHelpText>
        <label>Not Submitted Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>&quot;if logging PTO for your employee change owner to the employee before submitting for approval&quot;</defaultValue>
        <inlineHelpText>if you are logging PTO for another user, change the owner to the employee requesting the PTO before submitting for approval</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Approver__c</fullName>
        <formula>Employee_s_Name__r.PTO_Approver__r.FirstName &amp;&quot; &quot;&amp;Employee_s_Name__r.PTO_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Day_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Day 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Day_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Day 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Day_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Day 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Day_Date__c</fullName>
        <label>Partial Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Day_End_Time__c</fullName>
        <label>Partial Day End Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Day_Lunch__c</fullName>
        <label>Partial Day Lunch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Day_Start_Time__c</fullName>
        <label>Partial Day Start Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>PTO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartTime1PH__c</fullName>
        <label>StartTime1PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime2PH__c</fullName>
        <label>StartTime2PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime3PH__c</fullName>
        <label>StartTime3PH</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Off_Available_2014__c</fullName>
        <formula>Time_Off_Balance__r.Available_2014__c</formula>
        <label>Time Off Available (2014)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_Available_2015__c</fullName>
        <formula>Time_Off_Balance__r.Available_2015__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Off Available (2015)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_Available__c</fullName>
        <formula>Time_Off_Balance__r.Starting_Balance__c  -  Time_Off_Balance__r.Total_Approved__c  -  Time_Off_Balance__r.Total_Pending_Requests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Off Available (2013)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_Balance__c</fullName>
        <label>Time Off Balance</label>
        <referenceTo>Time_Off_Balance__c</referenceTo>
        <relationshipName>Time_Off_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>Last Date that you will be on Leave.</description>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Days_Multi_Day_PTO__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD( Multi_Day_From__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  Multi_Day_To__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( Multi_Day_To__c  -   Multi_Day_From__c ) + 1) &lt; 7)),
((CASE(MOD(  Multi_Day_To__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  Multi_Day_From__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( Multi_Day_To__c  -  Multi_Day_From__c ) - (CASE(MOD(  Multi_Day_From__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  Multi_Day_From__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD(  Multi_Day_To__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Multi Day PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Requested__c</fullName>
        <formula>Hours_to_be_Used__c /8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field calculated by the system by taking the hours to be used divided by 8</inlineHelpText>
        <label>Total Days Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_PTO__c</fullName>
        <label>Type Of PTO</label>
        <picklist>
            <picklistValues>
                <fullName>Partial Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>used by Managers to define the request</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA 1: these hours DO come out of the PTO balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA 2: these hours DO NOT come out of the PTO balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JURY: these hours do NOT come out of the PTO balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEREAVE: these hours do NOT come out of the PTO balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinGives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partialDayLunch__c</fullName>
        <label>partialDayLunch</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Off Request</label>
    <nameField>
        <displayFormat>PTOFF-{000000}</displayFormat>
        <label>Paid Time Off Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Requests</pluralLabel>
    <recordTypes>
        <fullName>Full_Day</fullName>
        <active>true</active>
        <label>Full Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy</fullName>
        <active>true</active>
        <label>Legacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiple_Days</fullName>
        <active>true</active>
        <label>Multiple Days</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partial_Day</fullName>
        <active>true</active>
        <label>Partial Day</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_Approval_Status</fullName>
        <active>true</active>
        <description>Cannot edit the record if the Approval Status is not Not Submitted and you are not the Approving Manager, PTO Approver, SF Admin, or HR staff.</description>
        <errorConditionFormula>!ISPICKVAL(Approval_Status__c, &quot;Not Submitted&quot;) &amp;&amp;
IF(
   $User.FirstName &amp; &quot; &quot; &amp; $User.LastName = Approving_Manager__c,
   FALSE,
   IF(
      $User.FirstName &amp; &quot; &quot; &amp; $User.LastName = PTO_Approver__c,
      FALSE,
      IF(
         CONTAINS($Profile.Name, &quot;Admin&quot;),
         FALSE,
         IF(
            CONTAINS($Profile.Name, &quot;Human Resources&quot;),
            FALSE,
            IF(
               $User.User_Full_Name__c = Alternate_PTO_Approver__c, 
               FALSE, 
               TRUE
)))))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>You do not have permission to edit this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_Date_and_To_Date_Same_Week_Only</fullName>
        <active>false</active>
        <description>SFDC Support Test Validation Rule</description>
        <errorConditionFormula>Case( 
MOD( DATE(YEAR( DATEVALUE(From_Date__c) ), 1, 1) - DATE (1900, 1, 7), 7), 
0, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 3) /7, 
1, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 4) /7, 
2, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 5) /7, 
3, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 6) /7, 
4, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 7) /7, 
5, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 1) /7, 
6, ( DATEVALUE(From_Date__c) - DATE(YEAR(DATEVALUE(From_Date__c)),1,1) + 2) /7, 
99) 
&lt;&gt; 
Case( 
MOD( DATE(YEAR(DATEVALUE( To_Date__c )), 1, 1) - DATE (1900, 1, 7), 7), 
0, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 3) /7, 
1, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 4) /7, 
2, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 5) /7, 
3, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 6) /7, 
4, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 7) /7, 
5, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 1) /7, 
6, ( DATEVALUE( To_Date__c )- DATE(YEAR(DATEVALUE( To_Date__c )),1,1) + 2) /7, 
99)</errorConditionFormula>
        <errorDisplayField>From_Date__c</errorDisplayField>
        <errorMessage>Please make separate Time Off Requests for time off occurring on different weeks.</errorMessage>
    </validationRules>
</CustomObject>